--- a/.gitmodules
+++ b/.gitmodules
@@ -3,12 +3,12 @@
 	url = git://github.com/PeterJCLaw/sr-comp-http.git
 [submodule "screens"]
 	path = screens
-	url = git://github.com/tomleese/sr-comp-screens
+	url = git://srobo.org/comp/srcomp-screens
 [submodule "shepherding"]
 	path = shepherding
-	url = git://github.com/tomleese/sr-comp-shepherding
+	url = git://srobo.org/srcomp-shepherding
 [submodule "compstate"]
 	path = compstate
-	url = git://github.com/PeterJCLaw/sr-dummy-comp.git
+	url = git://srobo.org/comp/dummy-comp
 # TODO: use this instead
 #	url = git://srobo.org/comp/sr2014-comp.git
