Switch the remaining submodule I missed in 179685081.
Change-Id: Ic78b1cd52b40a3689be62557ae1541fb87de1a52

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "http"]
 	path = http
-	url = git://github.com/PeterJCLaw/sr-comp-http.git
+	url = git://srobo.org/comp/srcomp-http
 [submodule "screens"]
 	path = screens
 	url = git://srobo.org/comp/srcomp-screens
