Convert to a script matching the setuptools system
Rather than having a root of a submodule tree, this repo now has a
script which fetches and configures all the relevant parts of the srcomp
infrastructure.

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,11 @@ nosetests.xml
 .mr.developer.cfg
 .project
 .pydevproject
+dummy-comp
+ranker
+srcomp-http
+srcomp-screens
+srcomp-stream
+srcomp
+venv
+srcomp-scorer
