--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,9 @@ mock==1.0.1
 python-dateutil==2.4.0
 simplejson==3.6.5
 six==1.9.0
+nose==1.3.4
+Babel==1.3
+snowballstemmer==1.2.0
+Sphinx-1.3b2
+docutils==0.12
+Pygments==2.0.2
