--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ python-dateutil==2.4.0
 simplejson==3.6.5
 six==1.9.0
 nose==1.3.4
+freezegun==0.2.8
 pytz==2014.10
 Babel==1.3
 snowballstemmer==1.2.0
