--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,26 @@
+Babel==1.3
+CherryPy==3.6.0
+docutils==0.12
 Flask==0.10.1
+freezegun==0.3.1
+itsdangerous==0.24
 Jinja2==2.7.3
 MarkupSafe==0.23
-PyYAML==3.11
-Werkzeug==0.10.1
-itsdangerous==0.24
 mock==1.0.1
+nose==1.3.4
+Pillow==2.7.0
+Pygments==2.0.2
 python-dateutil==2.4.0
+pytz==2014.10
+PyYAML==3.11
+reportlab==3.1.44
+requests==2.5.1
+ruamel.base==0.1
+ruamel.std.argparse==0.5.1
+ruamel.yaml==0.5.1
 simplejson==3.6.5
 six==1.9.0
-nose==1.3.4
-freezegun==0.3.1
-pytz==2014.10
-Babel==1.3
 snowballstemmer==1.2.0
 Sphinx==1.3b2
-docutils==0.12
-Pygments==2.0.2
-cherrypy==3.6.0
-requests==2.5.1
-Pillow==2.7.0
-reportlab==3.1.44
+timelib==0.2.4
+Werkzeug==0.10.1
