--- a/requirements.in
+++ b/requirements.in
@@ -1,28 +1,28 @@
-Babel==1.3
-CherryPy==3.6.0
-docutils==0.12
-Flask==0.10.1
-freezegun==0.3.1
-itsdangerous==0.24
-Jinja2==2.7.3
-MarkupSafe==0.23
-mock==1.0.1
-nose==1.3.4
-Pillow==2.7.0
-Pygments==2.0.2
-python-dateutil==2.4.0
-pytz==2014.10
-PyYAML==3.11
-reportlab==3.1.44
-requests==2.5.1
-ruamel.base==0.1
-ruamel.std.argparse==0.5.1
-ruamel.yaml==0.5.1
-simplejson==3.6.5
-six==1.9.0
-snowballstemmer==1.2.0
-Sphinx==1.3b2
-timelib==0.2.4
-Werkzeug==0.10.1
+Babel
+CherryPy
+docutils
+Flask
+freezegun
+itsdangerous
+Jinja2
+MarkupSafe
+mock
+nose
+Pillow
+Pygments
+python-dateutil
+pytz
+PyYAML
+reportlab
+requests
+ruamel.base
+ruamel.std.argparse
+ruamel.yaml
+simplejson
+six
+snowballstemmer
+Sphinx
+timelib
+Werkzeug
 
 pip-tools
