--- a/requirements.txt
+++ b/requirements.txt
@@ -4,20 +4,24 @@
 #
 #    pip-compile requirements.in
 #
+alabaster==0.7.12         # via sphinx
 babel==1.3
 cherrypy==3.6.0
 click==7.0                # via pip-tools
 docutils==0.12
 flask==0.10.1
 freezegun==0.3.1
+imagesize==1.1.0          # via sphinx
 itsdangerous==0.24
 jinja2==2.7.3
 markupsafe==0.23
 mock==1.0.1
 nose==1.3.4
+packaging==19.0           # via sphinx
 pillow==2.7.0
 pip-tools==3.5.0
 pygments==2.0.2
+pyparsing==2.3.1          # via packaging
 python-dateutil==2.4.0
 pytz==2014.10
 pyyaml==3.11
@@ -30,6 +34,8 @@ ruamel.yaml==0.5.1
 simplejson==3.6.5
 six==1.9.0
 snowballstemmer==1.2.0
-sphinx==1.3b2
+sphinx==1.8.5
+sphinxcontrib-websupport==1.1.0  # via sphinx
 timelib==0.2.4
+typing==3.6.6             # via sphinx
 werkzeug==0.10.1
