--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ docutils==0.12
 flask==0.10.1
 freezegun==0.3.1
 imagesize==1.1.0          # via sphinx
-itsdangerous==0.24
+itsdangerous==0.24        # via flask
 jinja2==2.7.3
 markupsafe==0.23
 mock==1.0.1
@@ -27,15 +27,15 @@ pytz==2014.10
 pyyaml==3.11
 reportlab==3.1.44
 requests==2.5.1
-ruamel.base==0.1
+ruamel.base==0.1          # via ruamel.std.argparse, ruamel.yaml
 ruamel.ordereddict==0.4.13  # via ruamel.yaml
-ruamel.std.argparse==0.5.1
+ruamel.std.argparse==0.5.1  # via ruamel.yaml
 ruamel.yaml==0.5.1
 simplejson==3.6.5
 six==1.9.0
-snowballstemmer==1.2.0
+snowballstemmer==1.2.0    # via sphinx
 sphinx==1.8.5
 sphinxcontrib-websupport==1.1.0  # via sphinx
 timelib==0.2.4
 typing==3.6.6             # via sphinx
-werkzeug==0.10.1
+werkzeug==0.10.1          # via flask
