--- a/requirements.txt
+++ b/requirements.txt
@@ -7,13 +7,13 @@
 alabaster==0.7.12         # via sphinx
 babel==1.3
 cherrypy==3.6.0
-click==7.0                # via pip-tools
+click==7.0                # via flask, pip-tools
 docutils==0.12
-flask==0.10.1
+flask==1.0.2
 freezegun==0.3.1
 imagesize==1.1.0          # via sphinx
 itsdangerous==0.24        # via flask
-jinja2==2.7.3
+jinja2==2.10
 markupsafe==0.23
 mock==1.0.1
 nose==1.3.4
@@ -38,4 +38,4 @@ sphinx==1.8.5
 sphinxcontrib-websupport==1.1.0  # via sphinx
 timelib==0.2.4
 typing==3.6.6             # via sphinx
-werkzeug==0.10.1          # via flask
+werkzeug==0.14.1          # via flask
