--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,14 @@
 #
 alabaster==0.7.12         # via sphinx
 babel==1.3
+certifi==2019.3.9         # via requests
+chardet==3.0.4            # via requests
 cherrypy==3.6.0
 click==7.0                # via flask, pip-tools
 docutils==0.12
 flask==1.0.2
 freezegun==0.3.1
+idna==2.8                 # via requests
 imagesize==1.1.0          # via sphinx
 itsdangerous==0.24        # via flask
 jinja2==2.10
@@ -26,7 +29,7 @@ python-dateutil==2.8.0
 pytz==2018.9
 pyyaml==3.13
 reportlab==3.1.44
-requests==2.5.1
+requests==2.21.0
 ruamel.base==0.1          # via ruamel.std.argparse, ruamel.yaml
 ruamel.ordereddict==0.4.13  # via ruamel.yaml
 ruamel.std.argparse==0.5.1  # via ruamel.yaml
@@ -38,4 +41,5 @@ sphinx==1.8.5
 sphinxcontrib-websupport==1.1.0  # via sphinx
 timelib==0.2.4
 typing==3.6.6             # via sphinx
+urllib3==1.24.1           # via requests
 werkzeug==0.14.1          # via flask
