Update to a recent ruamel.yaml
This also ensures we're using a version compatible with srcomp-cli

--- a/requirements.txt
+++ b/requirements.txt
@@ -30,16 +30,14 @@ pytz==2018.9
 pyyaml==3.13
 reportlab==3.1.44
 requests==2.21.0
-ruamel.base==0.1          # via ruamel.std.argparse, ruamel.yaml
 ruamel.ordereddict==0.4.13  # via ruamel.yaml
-ruamel.std.argparse==0.5.1  # via ruamel.yaml
-ruamel.yaml==0.5.1
+ruamel.yaml==0.13.14
 simplejson==3.6.5
 six==1.9.0
 snowballstemmer==1.2.0    # via sphinx
 sphinx==1.8.5
 sphinxcontrib-websupport==1.1.0  # via sphinx
 timelib==0.2.4
-typing==3.6.6             # via sphinx
+typing==3.6.6             # via ruamel.yaml, sphinx
 urllib3==1.24.1           # via requests
 werkzeug==0.14.1          # via flask
